# bar-with-foo-installed

./: .gitmodules  CMakeLists.txt  README.md
include/bar/: bar.hpp
lib/: CMakeLists.txt  bar.cpp
test/: CMakeLists.txt  test_bar.cpp
